--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,10 +53,11 @@ jobs:
       #    dist-folder: ./dist
           # bucket-region: eu-central-1
       - name: Upload to AWS S3
-        uses: jakejarvis/s3-sync-action@master
-        with:
-          args: --acl public-read --follow-symlinks --delete --exclude '.git*/*'  s3://your-bucket-name
-        env:
-          AWS_S3_BUCKET: ps-teszt-hosting
+        run: echo "itt lesz az aws feltoltes"
+        #uses: jakejarvis/s3-sync-action@master
+        #with:
+        #  args: --acl public-read --follow-symlinks --delete --exclude '.git*/*'  s3://your-bucket-name
+        #env:
+        #  AWS_S3_BUCKET: ps-teszt-hosting
           #AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           #AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
